--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-.DS_Store
-*~
-*.gz
-*.pyc
-__pycache__/
-mnist.pkl
-
-.idea/
-*.iml
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 
 out/
 target/
